--- a/assets/quiz.css
+++ b/assets/quiz.css
@@ -71,7 +71,7 @@ body {
     margin: 20px auto 0;
     border-radius: 4px;
     cursor: pointer;
-    display: none;
+    display: block;
 }
 
 .correct {
